# planner_ws

./: .gitignore  README.md  ROS2开发实践作业分工.xlsx  frames_2026-06-24_00.20.55.gv  ~$ROS2开发实践作业分工.xlsx
install/: local_setup.sh  setup.sh
install/planner_core_demo/lib/planner_core_demo/: astar_grid_demo  bspline_backend_demo  closed_loop_demo  ego_planner_demo  kino_astar_demo  mapping_demo  planner_benchmark  random_map_demo
install/planner_core_demo/share/planner_core_demo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
report/: benchmark_results.csv  性能评估报告.docx  性能评估报告.md
src/planner_core_demo/: CMakeLists.txt
src/planner_core_demo/launch/: benchmark.launch.py  planner_demo.launch.py
src/planner_core_demo/rviz/: planner_demo.rviz
src/planner_core_demo/src/: ackermann_bspline_demo.cpp  ackermann_closed_loop_demo.cpp  ackermann_ego_demo.cpp  ackermann_kino_astar_demo.cpp  astar_grid_demo.cpp  bspline_backend_demo.cpp  closed_loop_demo.cpp  ego_planner_demo.cpp  kino_astar_demo.cpp  mapping_demo.cpp  planner_benchmark.cpp  random_map_demo.cpp
src/planner_gazebo_demo/: CMakeLists.txt  package.xml
src/planner_gazebo_demo/launch/: gazebo_closed_loop.launch.py  gazebo_demo.launch.py  planner.launch.py  slam.launch.py
src/planner_gazebo_demo/maps/: planner_map.pgm  planner_map.yaml  slam_map.pgm  slam_map.yaml
src/planner_gazebo_demo/scripts/: world_to_map.py
src/planner_gazebo_demo/src/: ackermann_teleop.cpp  auto_explore.cpp  bspline_planner.cpp  ego_planner.cpp  gazebo_path_follower.cpp  kino_astar_planner.cpp  map_loader.hpp  tf_odometry_relay.cpp
src/planner_gazebo_demo/urdf/: ackermann_car.xacro
src/planner_gazebo_demo/worlds/: simple_world.sdf
src/planner_visualization_demo/: CMakeLists.txt
src/planner_visualization_demo/src/: marker_demo.cpp
src/small_gazebo_demo/: CMakeLists.txt  README.md  package.xml
src/small_gazebo_demo/launch/: closed_loop.launch.py  planner.launch.py  slam.launch.py
src/small_gazebo_demo/maps/: slam_small_map.pgm  slam_small_map.yaml  small_map.pgm  small_map.yaml
src/small_gazebo_demo/rviz/: planner.rviz  slam.rviz
src/small_gazebo_demo/scripts/: gazebo_path_marker.py  small_world_to_map.py
src/small_gazebo_demo/src/: small_auto_mapper.cpp  small_path_follower.cpp  small_path_player.cpp  small_scan_filter.cpp
src/small_gazebo_demo/urdf/: small_diffbot.urdf.xacro
src/small_gazebo_demo/worlds/: small_room.world
(+26 files in other folders)
